--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for Perl extension Lingua::JA::Gal
 
+0.02  Wed Sep  3 23:55:09 JST 2008
+        - first CPAN release
+
 0.01  Sat Mar 22 22:58:44 JST 2008
         - original version
