migrate to Module::Build::Tiny

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Perl extension Lingua::JA::Gal
 
+{{$NEXT}}
+
 0.02  Wed Sep  3 23:55:09 JST 2008
         - first CPAN release
 
